--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
+    "morgan": "^1.9.0",
     "mysql2": "^1.5.3",
     "path": "^0.12.7",
     "sequelize": "^4.37.6"
